[package]
name = "socket_second"
version = "0.1.0"
edition = "2024"

[dependencies]
socket2 = "0.6.2"
tokio = { version = "1.49.0", features = ["full"] }
color-eyre = "0.6.5"
tokio-util = { version = "0.7.18", features = ["full", "rt"] }
chrono = "0.4.43"
nix = { version = "0.31.1", features = ["uio", "socket"] }
